[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort' # aborts execution without cleaning stack/memory... OS will need to do it
                # makes smaller binary

[dependencies]
